Attempt to improve display of illustrations

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,9 @@ button:focus {
 }
 
 .word img {
-	max-height: 25vmax;
+	height: 80%;
+	max-height: 60vh;
+	width: auto;
 	margin: 0 auto;
 	display: block;
 }
