--- a/styles.css
+++ b/styles.css
@@ -194,21 +194,20 @@ figcaption {
 }
 
 .c-word {
+	display: grid;
 	background-color: #f5f5f5;
 	color: black;
 }
 
 .c-word__wrapper {
 	display: grid;
-	height: 100%;
 	justify-items: center;
 	align-items: center;
 }
 
 .c-word__image {
-	height: 80%;
 	width: auto;
-	max-height: 45vh;
+	max-height: 40vh;
 	max-width: 95%;
 }
 
